Blog post 1 - Football

--- a/about/index.html
+++ b/about/index.html
@@ -82,11 +82,11 @@
 
     
 
-    <p>My name is Joris den Uijl. I graduated as a <a href="https://www.tudelft.nl/en/ceg/about-faculty/departments/hydraulic-engineering/">hydraulic engineer from TU Delft</a> in January &lsquo;18. During my study I got more and more interested in &ldquo;tech&rdquo;. I started reading Hacker News, following ProductHunt and tought myself python programming. Luckily I was able to join a <a href="https://www.vanoord.com/" title="Van Oord">large marine contractor</a> as a Data Engineer.</p>
+    <p>My name is Joris den Uijl. I graduated as a <a href="https://www.tudelft.nl/en/ceg/about-faculty/departments/hydraulic-engineering/">hydraulic engineer from TU Delft</a> in January &lsquo;18. During my study I got more and more interested in &ldquo;tech&rdquo;. I started reading Hacker News, following ProductHunt and taught myself python programming. After my graduation I worked one year as a quantitave consultant in finance. Luckily I got a call from my former graduation supervisor and was able to join a <a href="https://www.vanoord.com/" title="Van Oord">large marine contractor</a> as a Data Engineer.</p>
 
 <p>I like data science/analytics/visualisation and python so most of my <em>projects</em> will comprise either analysing data or obtaining data. I&rsquo;ll post all code as python notebooks on <a href="https://github.com/uijl/uijl.github.io_code" title="GitHub of Joris">GitHub</a>.</p>
 
-<p>If you wish to contact feel free to send me a message on <a href="https://www.twitter.com/jorisdenuijl" title="Twitter of Joris">twitter</a> or connect with me on [LinkedIn](&ldquo;LinkedIn of Joris&rdquo;).</p>
+<p>If you wish to contact feel free to send me a message on <a href="https://www.twitter.com/jorisdenuijl" title="Twitter of Joris">Twitter</a> or connect with me on <a href="https://www.linkedin.com/in/jorisdenuijl" title="LinkedIn of Joris">LinkedIn</a>.</p>
 
 
 </article>
