--- a/reading/index.html
+++ b/reading/index.html
@@ -91,21 +91,21 @@
 <p>I have not finished any book yet, but I am reading the following:</p>
 
 <ul>
-<li><a href="https://www.goodreads.com/book/show/242472.The_Black_Swan">The Black Swan - Nassim Nicholas Taleb</a>.</li>
+<li><a href="https://www.goodreads.com/book/show/242472.The_Black_Swan">The Black Swan - Nassim Nicholas Taleb.</a> I find it hard to get through this book, but I enjoy the insights and the way of thinking that Taleb presents.</li>
 </ul>
 
 <h3 id="2018">2018</h3>
 
-<p>Unfortunately this list is not as long as I thought it would be.</p>
+<p>Unfortunately this list is not as long as I hoped it would be.</p>
 
 <ul>
 <li><a href="https://www.goodreads.com/book/show/23692271-sapiens">Sapiens - Yuval Noah Hariri.</a> I read this Book, just like everyone else. But unlike most people, I found it kind of hard to get through.</li>
 <li><a href="https://www.goodreads.com/book/show/1301.Moneyball">Moneyball - Michael Lewis.</a> I like the books by Michael Lewis, I have read two books by him this year.</li>
-<li><a href="https://www.goodreads.com/book/show/29780253-born-a-crime">Born a Crime - Trevor Noah.</a></li>
-<li><a href="https://www.goodreads.com/book/show/7865083-liar-s-poker">Liar&rsquo;s Poker - Michael Lewis.</a></li>
-<li><a href="https://www.goodreads.com/book/show/22237161-the-sellout">The Sellout - Paul Beatty.</a></li>
-<li><a href="https://www.goodreads.com/book/show/128429.Against_the_Gods">Against the Gods - Peter Bernstein.</a></li>
-<li><a href="https://www.goodreads.com/book/show/32283133-origin">Origin - Dan Brown.</a></li>
+<li><a href="https://www.goodreads.com/book/show/29780253-born-a-crime">Born a Crime - Trevor Noah.</a> Loved it.</li>
+<li><a href="https://www.goodreads.com/book/show/7865083-liar-s-poker">Liar&rsquo;s Poker - Michael Lewis.</a> The second book of Michael Lewis that I read in 2018.</li>
+<li><a href="https://www.goodreads.com/book/show/22237161-the-sellout">The Sellout - Paul Beatty.</a> I do not think that I understood it. It was very fun, and I love satire, but I feel like I missed something.</li>
+<li><a href="https://www.goodreads.com/book/show/128429.Against_the_Gods">Against the Gods - Peter Bernstein.</a> Interesting book on the definiting of risk and probability throughout the modern times.</li>
+<li><a href="https://www.goodreads.com/book/show/32283133-origin">Origin - Dan Brown.</a> The only true novel I read this year. I always like to books by Dan Brown, with recurring patterns of symbolics and art history.</li>
 </ul>
 
 
