--- a/goals/index.html
+++ b/goals/index.html
@@ -84,9 +84,9 @@
 
     
 
-<p>Since I am trained as a (hydraulic) engineering I learned to code by myself. To prioritize my time I need a clear list of (prioritized) goals. The goal of publishing this list is similar as this website: Forcing myself to showcase my results and goals. If you have any questions or recommendations, please contact me on <a href="https://www.twitter.com/jorisdenuijl">twitter</a>.</p>
+<p>Since I am trained as a (hydraulic) engineer I learned to code by myself. To prioritize my time I need a clear list of (prioritized) goals. The goal of publishing this list is similar as this website: Forcing myself to showcase my results and goals. If you have any questions or recommendations, please contact me on <a href="https://www.twitter.com/jorisdenuijl">twitter</a>.</p>
 
-<p>This will be a &ldquo;living&rdquo; document and I&rsquo;ll update is as I came across something else or finished one of the listed goals.</p>
+<p>This will be a &ldquo;living&rdquo; document and I&rsquo;ll update this as I came across something else or finished one of the listed goals.</p>
 
 <h3 id="1-python">1. Python</h3>
 
@@ -111,7 +111,7 @@
 
 <p>It is very frustrating to gain valuable insights on Machine Learning due to all the bullshit that is available online. I once started a course on <a href="https://classroom.udacity.com/courses/ud120">Udacity</a> but quit halfway through after realising it was more or less a showcase on using <a href="http://scikit-learn.org/stable/index.html">Scikit-Learn</a>. Of course, being able to use a powerfull library such as SKLearn is very valuable, but I think that understanding the mathematics underlying these algorithms (even only the basics) is required to actually draw conclusions from your output.</p>
 
-<p>I really enjoyed the course by <a href="https://www.coursera.com">Andrew Ng on Machine Learning</a>. It is focussed (to a certain extend) on the mathematics behind Neural Networks especially, which I found very interesting and was exactly what I was looking for. I even paid for the certificate, the only one I every paid for. If you want to learn more on Linear Algebra I recommend the videos by <a href="https://www.youtube.com/watch?v=fNk_zzaMoSs&amp;list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab">Three Blue One Brown</a>. Three Blue One Brown uses powerfull visualisations — <a href="https://github.com/3b1b/manim">his code for doing so is open source</a> — and this allows the viewer a better insight on how linear algebra works. His movies on <a href="https://www.youtube.com/watch?v=aircAruvnKk&amp;list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">Neural Networks</a> have these interesting visualisations as well and are a nice addition to the lectures by Andrew Ng.</p>
+<p>I really enjoyed the course by <a href="https://www.coursera.com">Andrew Ng on Machine Learning</a>. It is focussed (to a certain extend) on the mathematics behind Neural Networks especially, which I found very interesting and was exactly what I was looking for. I even paid for the certificate, the only one I ever paid for. If you want to learn more on Linear Algebra I recommend the videos by <a href="https://www.youtube.com/watch?v=fNk_zzaMoSs&amp;list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab">Three Blue One Brown</a>. Three Blue One Brown uses powerfull visualisations — <a href="https://github.com/3b1b/manim">his code for doing so is open source</a> — and this allows the viewer a better insight on how linear algebra works. His movies on <a href="https://www.youtube.com/watch?v=aircAruvnKk&amp;list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">Neural Networks</a> have these interesting visualisations as well and are a nice addition to the lectures by Andrew Ng.</p>
 
 <p>This is my current state. I am planning to apply the gained skills into some interesting blogposts. To deepen my knowledge I want to follow some more courses and I have started with deep probability. As I understand this is one of the thoughest courses at Stanford, but that seems to be the best motivation I can have:</p>
 
