--- a/about/index.html
+++ b/about/index.html
@@ -104,7 +104,7 @@
     <footer>
         <h6>
             Rendered by <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            <a href="http://uijl.github.io/index.xml">Subscribe</a></h6>
+            Designed by me</h6>
     </footer>
 </div>
 <script src="/js/scripts.js"></script>
