--- a/reading/index.html
+++ b/reading/index.html
@@ -92,10 +92,17 @@
 
 <h3 id="2019">2019</h3>
 
-<p>I have not finished any book yet, but I am reading the following:</p>
+<p>I am reading the following book:</p>
 
 <ul>
-<li><a href="https://www.goodreads.com/book/show/242472.The_Black_Swan">The Black Swan - Nassim Nicholas Taleb.</a> I find it hard to get through this book, but I enjoy the insights and the way of thinking that Taleb presents.</li>
+<li><a href="https://www.goodreads.com/book/show/69571.Rich_Dad_Poor_Dad"><strong>Rich Dad, Poor Dad - Robert Kiyosaki.</strong></a> On his podcast the author seems to be very arrogant, I do not know yet if his book will be similar.</li>
+</ul>
+
+<p>I have finished only one book yet:</p>
+
+<ul>
+<li><a href="https://www.goodreads.com/book/show/82101.Richest_Man_in_Babylon_and_The_Magic_Story"><strong>The Richest man in Babylon - George Clason.</strong></a> Both this book and Rich Dad, Poor Dad get recommended often if you want to learn more about becom financially independent, but I do not find it that insightfull. It basically comes down to three things: Do not spend more than you earn / have, Save at least 10% of income, Make your money work for you.</li>
+<li><a href="https://www.goodreads.com/book/show/242472.The_Black_Swan"><strong>The Black Swan - Nassim Nicholas Taleb.</strong></a> I enjoy the insights and the way of thinking that Taleb presents.</li>
 </ul>
 
 <h3 id="2018">2018</h3>
@@ -103,13 +110,13 @@
 <p>Unfortunately this list is not as long as I hoped it would be.</p>
 
 <ul>
-<li><a href="https://www.goodreads.com/book/show/23692271-sapiens">Sapiens - Yuval Noah Hariri.</a> I read this Book, just like everyone else. But unlike most people, I found it kind of hard to get through.</li>
-<li><a href="https://www.goodreads.com/book/show/1301.Moneyball">Moneyball - Michael Lewis.</a> I like the books by Michael Lewis, I have read two books by him this year.</li>
-<li><a href="https://www.goodreads.com/book/show/29780253-born-a-crime">Born a Crime - Trevor Noah.</a> Loved it.</li>
-<li><a href="https://www.goodreads.com/book/show/7865083-liar-s-poker">Liar&rsquo;s Poker - Michael Lewis.</a> The second book of Michael Lewis that I read in 2018.</li>
-<li><a href="https://www.goodreads.com/book/show/22237161-the-sellout">The Sellout - Paul Beatty.</a> I do not think that I understood it. It was very fun, and I love satire, but I feel like I missed something.</li>
-<li><a href="https://www.goodreads.com/book/show/128429.Against_the_Gods">Against the Gods - Peter Bernstein.</a> Interesting book on the definiting of risk and probability throughout the modern times.</li>
-<li><a href="https://www.goodreads.com/book/show/32283133-origin">Origin - Dan Brown.</a> The only true novel I read this year. I always like to books by Dan Brown, with recurring patterns of symbolics and art history.</li>
+<li><a href="https://www.goodreads.com/book/show/23692271-sapiens"><strong>Sapiens - Yuval Noah Hariri.</strong></a> I read this Book, just like everyone else. But unlike most people, I found it kind of hard to get through.</li>
+<li><a href="https://www.goodreads.com/book/show/1301.Moneyball"><strong>Moneyball - Michael Lewis.</strong></a> I like the books by Michael Lewis, I have read two books by him this year.</li>
+<li><a href="https://www.goodreads.com/book/show/29780253-born-a-crime"><strong>Born a Crime - Trevor Noah.</strong></a> Loved it.</li>
+<li><a href="https://www.goodreads.com/book/show/7865083-liar-s-poker"><strong>Liar&rsquo;s Poker - Michael Lewis.</strong></a> The second book of Michael Lewis that I read in 2018.</li>
+<li><a href="https://www.goodreads.com/book/show/22237161-the-sellout"><strong>The Sellout - Paul Beatty.</strong></a> I do not think that I understood it. It was very fun, and I love satire, but I feel like I missed something.</li>
+<li><a href="https://www.goodreads.com/book/show/128429.Against_the_Gods"><strong>Against the Gods - Peter Bernstein.</strong></a> Interesting book on the definiting of risk and probability throughout the modern times.</li>
+<li><a href="https://www.goodreads.com/book/show/32283133-origin"><strong>Origin - Dan Brown.</strong></a> The only true novel I read this year. I always like to books by Dan Brown, with recurring patterns of symbolics and art history.</li>
 </ul>
 
 
