--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Although I understand the logic behind this reasoning, I have never seen data th
     <footer>
         <h6>
             Rendered by <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            Designed by me</h6>
+            Design modified from <a href="https://themes.gohugo.io/hugo-kiera/" title="Hugo">Hugo Kiera</a></h6>
     </footer>
 </div>
 <script src="/js/scripts.js"></script>
